tooling/nargo_cli/tests/snapshots/execution_failure/conditional_pop_front_from_empty_vector/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
   ┌─ src/main.nr:11:20
   │
11 │     let (ret, _) = s.pop_front();
   │                    -----------
   │
   = Call stack:
     1. src/main.nr:11:20

Failed assertion
