tooling/nargo_cli/tests/snapshots/execution_failure/conditional_pop_front_from_empty_vector/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to pop from an empty vector
   ┌─ src/main.nr:11:20
   │
11 │     let (ret, _) = s.pop_front();
   │                    ------------- Assertion failed
   │
   = Call stack:
     1: ?
             at src/main.nr:1:8
     2: main
             at src/main.nr:11:20

Error interpreting main function
